+mustafa | change: invoice payment url in server.js, fix: Remove mandatory state field if country is other than India, remove duplicacy of statekey in add/update account, fix:merge uniquename exceed overlapping

--- a/app/webapp/Globals/css/style-2.css
+++ b/app/webapp/Globals/css/style-2.css
@@ -2571,6 +2571,7 @@ label {
 }
 .accmerge li a {
     padding: 4px 8px;
+    float: left;
     color: #808080;
     background: #e5e5e5;
 }
